<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp"
    android:lines="10"
    android:scrollbars = "vertical">

    <TextView
        android:id="@+id/texto_conectar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/conectar"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/loginInputNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:hint="@string/Correo" />

    <EditText
        android:id="@+id/loginInputContrasenna"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:id="@+id/checkBoxUsuario"
        android:layout_gravity="left|center_vertical"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/guardaContrasenna"/>

    <Button
        android:id="@+id/loginBotonIniciar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/iniciarSesion" />

</LinearLayout>