<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joha.mantenimiento.mas_informacion_fragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/negro"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/id"
                android:id="@+id/informacionLabelID"
                android:layout_column="0" />
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/informacionIDServ"
                android:layout_gravity="center_horizontal"
                android:layout_column="27" />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Laboratorio"
                android:textColor="@color/negro"
                android:id="@+id/informacionLabelLab"
                android:layout_column="0" />
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="2"
                android:id="@+id/informacionLabServ"
                android:layout_gravity="center_horizontal"
                android:layout_column="27" />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fechaRealizado"
                android:textColor="@color/negro"
                android:id="@+id/informacionFechaInicial"
                android:layout_column="0" />

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="3"
                android:id="@+id/informacionFechaInicialServ"
                android:layout_gravity="center_horizontal"
                android:layout_column="27" />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fechaSolicitud"
                android:textColor="@color/negro"
                android:id="@+id/informacionFechaFinal"
                android:layout_column="0" />
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="4"
                android:id="@+id/informacionFechaFinalServ"
                android:layout_gravity="center_horizontal"
                android:layout_column="27" />
        </TableRow>

        <TableRow
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/descripcion"
                android:textColor="@color/negro"
                android:id="@+id/informacionLab"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="4"
                android:id="@+id/informacionDescripcionServ"
                android:layout_gravity="center_horizontal"
                android:layout_column="0"
                android:layout_span="27"
                android:lines="4"
                android:scrollbars = "vertical"/>
        </TableRow>
    </TableLayout>
    </ScrollView>
</FrameLayout>

