<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joha.mantenimiento.crear_reporte_fragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right|top">
        <TableRow
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/laboratorio"
                android:textColor="@color/colorPrimary"
                android:id="@+id/crearLabelEstablecimiento"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Spinner android:id="@+id/crearSpinnerLab"
                android:layout_column="0"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/descripcion"
                android:textColor="@color/colorPrimary"
                android:id="@+id/crearLabelDescripcion"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:background="@drawable/edit_text_style"
                android:lines="4"
                android:scrollbars = "vertical"
                android:id="@+id/crearInputDescripcion"
                android:layout_column="0"/>
        </TableRow>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/fechaSolicitud" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/fechaSeleccionada"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/botonCalendariio"
                android:layout_height="wrap_content"
                android:background="@drawable/calendar"/>
        </LinearLayout>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/aceptarBoton"
                android:id="@+id/crearBotonInsertar"
                android:layout_column="0" />
        </TableRow>
    </TableLayout>
    </ScrollView>
</FrameLayout>